--- a/Inventory.Application/Inventory.Application.csproj
+++ b/Inventory.Application/Inventory.Application.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Inventory.Domain\Inventory.Domain.csproj" />
+      <ProjectReference Include="..\Inventory.Infrastructure\Inventory.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
