Create a classic webapi

--- a/Inventory.MinimalApi/Inventory.MinimalApi.csproj
+++ b/Inventory.MinimalApi/Inventory.MinimalApi.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Inventory.Api.Authentication\Inventory.Api.Authentication.csproj" />
     <ProjectReference Include="..\Inventory.Application\Inventory.Application.csproj" />
     <ProjectReference Include="..\Inventory.Infrastructure\Inventory.Infrastructure.csproj" />
   </ItemGroup>
