--- a/Inventory.Infrastructure/Inventory.Infrastructure.csproj
+++ b/Inventory.Infrastructure/Inventory.Infrastructure.csproj
@@ -7,15 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Inventory.CrossCutting.Cqrs\Inventory.CrossCutting.Cqrs.csproj" />
       <ProjectReference Include="..\Inventory.Domain\Inventory.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Helpers\Cqrs" />
     </ItemGroup>
 
 </Project>
