--- a/Inventory.CrossCutting.Exceptions/Inventory.CrossCutting.Exceptions.csproj
+++ b/Inventory.CrossCutting.Exceptions/Inventory.CrossCutting.Exceptions.csproj
@@ -6,4 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="11.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    </ItemGroup>
+
 </Project>
