--- a/Inventory.Api/Inventory.Api.csproj
+++ b/Inventory.Api/Inventory.Api.csproj
@@ -7,12 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.3.1" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Inventory.Api.Authentication\Inventory.Api.Authentication.csproj" />
+      <ProjectReference Include="..\Inventory.Api.HostedServices\Inventory.Api.HostedServices.csproj" />
       <ProjectReference Include="..\Inventory.Application\Inventory.Application.csproj" />
     </ItemGroup>
 
