--- a/Inventory.UnitTests/Inventory.UnitTests.csproj
+++ b/Inventory.UnitTests/Inventory.UnitTests.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
         <PackageReference Include="FluentAssertions" Version="6.6.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
         <PackageReference Include="Moq" Version="4.17.2" />
