SqlServer Persistence - Add SqlServer context and repository implementation - Remove InMemory persistence

--- a/Inventory.Api/appsettings.json
+++ b/Inventory.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "InventoryItems": "server=localhost,1433;database=InventoryItems;User Id=sa;Password=2u3866ppTpazDLzyEiIw;TrustServerCertificate=true;"
+  }
 }
