--- a/Inventory.Infrastructure/Inventory.Infrastructure.csproj
+++ b/Inventory.Infrastructure/Inventory.Infrastructure.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Inventory.CrossCutting.Cqrs\Inventory.CrossCutting.Cqrs.csproj" />
+      <ProjectReference Include="..\Inventory.CrossCutting.Data\Inventory.CrossCutting.Data.csproj" />
       <ProjectReference Include="..\Inventory.CrossCutting.Exceptions\Inventory.CrossCutting.Exceptions.csproj" />
       <ProjectReference Include="..\Inventory.Domain\Inventory.Domain.csproj" />
     </ItemGroup>
