Implement unit of work pattern

--- a/Inventory.Infrastructure/Inventory.Infrastructure.csproj
+++ b/Inventory.Infrastructure/Inventory.Infrastructure.csproj
@@ -12,6 +12,7 @@
       <ProjectReference Include="..\Inventory.CrossCutting.Data\Inventory.CrossCutting.Data.csproj" />
       <ProjectReference Include="..\Inventory.CrossCutting.Exceptions\Inventory.CrossCutting.Exceptions.csproj" />
       <ProjectReference Include="..\Inventory.Domain\Inventory.Domain.csproj" />
+      <ProjectReference Include="..\Inventory.Infrastructure.Contracts\Inventory.Infrastructure.Contracts.csproj" />
     </ItemGroup>
 
     <ItemGroup>
