--- a/Inventory.Api/appsettings.json
+++ b/Inventory.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "InventoryItems": "server=localhost,1433;database=InventoryItems;User Id=sa;Password=2u3866ppTpazDLzyEiIw;TrustServerCertificate=true;"
+    "InventoryItems": "server=inventory-sql,1433;database=InventoryItems;User Id=sa;Password=2u3866ppTpazDLzyEiIw;TrustServerCertificate=true;"
   }
 }
