--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,21 @@
   inventory.api:
     image: inventory.api
     ports:
-      - "57000:80"
+      - "57000:8080"
       - "57100:443"
     build:
       context: .
       dockerfile: Inventory.Api/Dockerfile
+  jaeger:
+    image: jaegertracing/all-in-one:1.50
+    container_name: jaeger
+    ports:
+      - "6831:6831/udp" # Puerto para recibir spans
+      - "6832:6832/udp" # Puerto para Thrift en UDP
+      - "5775:5775/udp" # Puerto para compact UDP (legacy)
+      - "16686:16686"   # UI
+      - "14268:14268"   # API para HTTP
+      - "14250:14250"   # API para gRPC
+      - "9411:9411"     # API para Zipkin
+    environment:
+      COLLECTOR_ZIPKIN_HTTP_PORT: "9411"
