Refactor: Update dependency structure and service registration for DDD layers

--- a/Inventory.Application/Inventory.Application.csproj
+++ b/Inventory.Application/Inventory.Application.csproj
@@ -8,9 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Inventory.CrossCutting.Events\Inventory.CrossCutting.Events.csproj" />
+      <ProjectReference Include="..\Inventory.CrossCutting.Cqrs\Inventory.CrossCutting.Cqrs.csproj" />
       <ProjectReference Include="..\Inventory.Domain\Inventory.Domain.csproj" />
-      <ProjectReference Include="..\Inventory.Infrastructure\Inventory.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
