--- a/Inventory.Domain/Inventory.Domain.csproj
+++ b/Inventory.Domain/Inventory.Domain.csproj
@@ -7,4 +7,8 @@
         <LangVersion>default</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Inventory.CrossCutting.Data\Inventory.CrossCutting.Data.csproj" />
+    </ItemGroup>
+
 </Project>
