--- a/Inventory.Api/Inventory.Api.csproj
+++ b/Inventory.Api/Inventory.Api.csproj
@@ -24,6 +24,7 @@
       <ProjectReference Include="..\Inventory.CrossCutting.Api.Authentication\Inventory.CrossCutting.Api.Authentication.csproj" />
       <ProjectReference Include="..\Inventory.CrossCutting.Api.HostedServices\Inventory.CrossCutting.Api.HostedServices.csproj" />
       <ProjectReference Include="..\Inventory.Application\Inventory.Application.csproj" />
+      <ProjectReference Include="..\Inventory.Infrastructure\Inventory.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
