--- a/Inventory.Application/Inventory.Application.csproj
+++ b/Inventory.Application/Inventory.Application.csproj
@@ -8,12 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Inventory.CrossCutting.Cqrs\Inventory.CrossCutting.Cqrs.csproj" />
+      <ProjectReference Include="..\CrossCutting.Cqrs\CrossCutting.Cqrs.csproj" />
+      <ProjectReference Include="..\CrossCutting.Exceptions\CrossCutting.Exceptions.csproj" />
       <ProjectReference Include="..\Inventory.Domain\Inventory.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="11.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     </ItemGroup>
 
