FIX: Update dockerfile after refactor dependencies

--- a/Inventory.Api/Dockerfile
+++ b/Inventory.Api/Dockerfile
@@ -8,16 +8,13 @@ EXPOSE 80
 EXPOSE 443
 WORKDIR /src
 COPY ["Inventory.Api/Inventory.Api.csproj", "Inventory.Api/"]
-COPY ["Inventory.CrossCutting.Api.Authentication/Inventory.CrossCutting.Api.Authentication.csproj", "Inventory.CrossCutting.Api.Authentication/"]
-COPY ["Inventory.CrossCutting.Api.HostedServices/Inventory.CrossCutting.Api.HostedServices.csproj", "Inventory.CrossCutting.Api.HostedServices/"]
-COPY ["Inventory.Infrastructure.Contracts/Inventory.Infrastructure.Contracts.csproj", "Inventory.Infrastructure.Contracts/"]
-COPY ["Inventory.CrossCutting.Data/Inventory.CrossCutting.Data.csproj", "Inventory.CrossCutting.Data/"]
+COPY ["CrossCutting.Api.Authentication/CrossCutting.Api.Authentication.csproj", "CrossCutting.Api.Authentication/"]
+COPY ["CrossCutting.Cqrs/CrossCutting.Cqrs.csproj", "CrossCutting.Cqrs/"]
+COPY ["CrossCutting.Data/CrossCutting.Data.csproj", "CrossCutting.Data/"]
 COPY ["Inventory.Domain/Inventory.Domain.csproj", "Inventory.Domain/"]
+COPY ["CrossCutting.Exceptions/CrossCutting.Exceptions.csproj", "CrossCutting.Exceptions/"]
 COPY ["Inventory.Application/Inventory.Application.csproj", "Inventory.Application/"]
-COPY ["Inventory.CrossCutting.Events/Inventory.CrossCutting.Events.csproj", "Inventory.CrossCutting.Events/"]
 COPY ["Inventory.Infrastructure/Inventory.Infrastructure.csproj", "Inventory.Infrastructure/"]
-COPY ["Inventory.CrossCutting.Cqrs/Inventory.CrossCutting.Cqrs.csproj", "Inventory.CrossCutting.Cqrs/"]
-COPY ["Inventory.CrossCutting.Exceptions/Inventory.CrossCutting.Exceptions.csproj", "Inventory.CrossCutting.Exceptions/"]
 RUN dotnet restore "Inventory.Api/Inventory.Api.csproj"
 COPY . .
 WORKDIR "/src/Inventory.Api"
