Remove custom repository and UnitOfWork implementations
Replaced custom repository and UnitOfWork patterns with the UnitOfWorkinator library to streamline functionality and reduce maintenance overhead. Updated relevant dependencies, handlers, and service configurations to integrate the new library, while removing obsolete custom implementations.

--- a/Inventory.Domain/Inventory.Domain.csproj
+++ b/Inventory.Domain/Inventory.Domain.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\CrossCutting.Data\CrossCutting.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="UnitOfWorkinator.Abstractions" Version="1.0.2" />
+    </ItemGroup>
+
 </Project>
