--- a/Inventory.Infrastructure/Inventory.Infrastructure.csproj
+++ b/Inventory.Infrastructure/Inventory.Infrastructure.csproj
@@ -8,16 +8,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CrossCutting.Data.SqlServer\CrossCutting.Data.SqlServer.csproj" />
       <ProjectReference Include="..\Inventory.Application\Inventory.Application.csproj" />
       <ProjectReference Include="..\CrossCutting.Cqrs\CrossCutting.Cqrs.csproj" />
-      <ProjectReference Include="..\CrossCutting.Data\CrossCutting.Data.csproj" />
       <ProjectReference Include="..\CrossCutting.Exceptions\CrossCutting.Exceptions.csproj" />
       <ProjectReference Include="..\Inventory.Domain\Inventory.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="UnitOfWorkinator.EFCore" Version="1.0.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
+      <PackageReference Include="UnitOfWorkinator.EFCore" Version="1.0.3" />
     </ItemGroup>
 
 </Project>
